tests/ui/reborrow/coerce-shared-decl-macro-hygiene.stderr
error: implementing `CoerceShared` requires corresponding fields to match, be reborrowable with `CoerceShared`, or coerce a mutable reference field to a shared reference field
  --> $DIR/coerce-shared-decl-macro-hygiene.rs:15:9
   |
LL |         field: &'a i64,
   |         -------------- source field `field` has type `&'a i64`
...
LL |         field: &'a i64,
   |         ^^^^^^^^^^^^^^ target field `field` has type `&'a i64`
...
LL | my_macro!(field);
   | ---------------- in this macro invocation
   |
   = note: this error originates in the macro `my_macro` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

